--- a/WeatherForecast/WeatherForecast.csproj
+++ b/WeatherForecast/WeatherForecast.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weather.cs" />
+    <Compile Include="WeatherController.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
